<resources>
    <string name="app_name">Demo4KotlinExtension</string>
    <string name="pool">pool</string>
    <string name="handler">handler</string>
    <string name="intent">intent</string>
    <string name="permission">permission</string>
    <string name="service">service</string>
    <string name="file">file</string>
    <string name="memory">memory</string>
    <string name="resource">resource</string>
    <string name="shared">shared</string>
    <string name="algorithm">algorithm</string>
    <string name="log">log</string>
    <string name="anim">anim</string>
    <string name="view">view</string>
    <string name="create_pool">create_pool</string>
    <string name="get_pool_and_recycle">get_pool_and_recycle</string>
    <string name="get_pool_no_recycle">get_pool_no_recycle</string>
    <string name="pool_text">pool_text</string>
    <string name="post">post</string>
    <string name="handler_text">handler_text</string>
    <string name="post_and_remove">post_and_remove</string>
    <string name="post_and_remove_all">post_and_remove_all</string>
    <string name="post_delay">post_delay</string>
    <string name="put_string">put_string</string>
    <string name="get_string">get_string</string>
    <string name="put_obj">put_obj</string>
    <string name="get_obj">get_obj</string>
    <string name="memory_text">memory_text</string>
    <string name="get_default">get_default</string>
    <string name="get_color">get_color</string>
    <string name="get_mipmap">get_mipmap</string>
    <string name="get_drawable">get_drawable</string>
    <string name="resource_text">resource_text</string>
</resources>
