<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.linyuzai.demo4kotlinextension.activity.MemoryActivity">

    <Button
        android:id="@+id/put_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/put_string" />

    <Button
        android:id="@+id/get_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_string" />

    <Button
        android:id="@+id/put_obj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/put_obj" />

    <Button
        android:id="@+id/get_obj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_obj" />

    <Button
        android:id="@+id/get_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_default" />

    <TextView
        android:id="@+id/memory_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_text" />
</LinearLayout>
