<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.linyuzai.demo4kotlinextension.activity.HandlerActivity">

    <Button
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post" />

    <Button
        android:id="@+id/post_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_delay" />

    <Button
        android:id="@+id/post_and_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_and_remove" />

    <Button
        android:id="@+id/post_and_remove_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_and_remove_all" />

    <TextView
        android:id="@+id/handler_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/handler_text" />
</LinearLayout>
