<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.linyuzai.demo4kotlinextension.activity.ResourceActivity">

    <Button
        android:id="@+id/get_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_color" />

    <Button
        android:id="@+id/get_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_string" />

    <Button
        android:id="@+id/get_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_drawable" />

    <Button
        android:id="@+id/get_mipmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_mipmap" />

    <TextView
        android:id="@+id/resource_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resource_text" />

    <ImageView
        android:id="@+id/resource_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
